# Logex

./: .gitmodules  CMakeLists.txt  CMakePresets.json  LICENSE  README.org  conanfile.py
Logger/: CMakeLists.txt
Logger/src/: Common.cpp  Common.h  Logger.cpp  Logger.h
Testbed/: CMakeLists.txt
Testbed/src/: main.cpp
include/: Logex.h
